@@ -1,3 +1,9 @@
+2015-07-11	Multiplication.
+
+		include/biting-pear/bbq.h ,
+		include/biting-pear/kthxbai.h :
+		- added multiplication and inverse multiplication
+
 2015-07-10	C++ compiler all the way.
 
 		GNUmakefile :
